deploy/k8s-template/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: afterglow
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
